Ajout de la section Contact

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<<<<<<< HEAD
 
+Contact
 
 
 Allo tout le monde
@@ -12,10 +12,7 @@ Ma modification
 
 Mes changements
 
-=======
-<<<<<<< HEAD
+
 Allo tout le monde
-=======
+
 Mes changements
->>>>>>> 0b3b207f167a8861c38ede340f8f1e9eddce001f
->>>>>>> develop
